# talkdemo-backend

./: .gitignore  Dockerfile  README.md  app.py  build.sh  main.py  pyproject.toml  requirements.txt
uploads/: recorded_audio.webm
