[tool.poetry]
name = "talkdemo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = "0.34.0"
openai = "1.61.0"
python-dotenv = "1.0.1"
sounddevice = "0.4.6"
numpy = "1.26.4"
scipy = "1.12.0"
soundfile = "0.12.1"
click = "8.1.7"
pyaudio = "^0.2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
